--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHESS Game</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="/styles/game.css">
 </head>
 <body>
-    <div class="main bg-black h-screen">
-        <h1 class="font-extrabold text-gray-300 text-4xl">Welcome to the abnjain's Chess Game</h1>
-        <div id="chessboard" class="chessboard w-96 h-96 bg-yellow-700"></div>
+    <div class="main grid justify-center items-center bg-black h-screen">
+        <!-- <h1 class="font-extrabold text-gray-300 text-3xl">Welcome to the abnjain's Chess Game</h1> -->
+        <div class="roleName"><p></p></div>
+        
+        <div class="chessBoard flex justify-center items-center w-96 h-96 bg-red-600"></div>
     </div>
-    
+
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/scripts/game.js"></script>
