--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -1,8 +1,4 @@
 /* styles.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
     background-color: #000;
     color: #fff;
@@ -18,6 +14,15 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+p{
+    font-size: x-large;
+    margin-top: 0%;
+}
+
+.roleName p{
+    font-size: small;
 }
 
 .chessBoard {
