--- a/views/game.ejs
+++ b/views/game.ejs
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHESS Game</title>
+    <title>CHESS Game | Play</title>
     <link rel="stylesheet" href="/styles/game.css">
 </head>
 <body>
+    <div class="logout">
+        <form action="/auth/logout" method="POST">
+            <button type="submit">Logout</button>
+        </form>
+    </div>
     <div class="main">
         <p>Welcome to the abnjain's Chess Game</p>
-        <div class="roleName"><p>Spectator's View</p></div>
+        <div class="roleName"><span><%= userName %> </span><p> as a Spectator</p></div>
         <div class="chessBoard"></div>
     </div>
 
