--- a/views/game.ejs
+++ b/views/game.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHESS Game | Play</title>
+    <link rel="icon" href="/images/Untitled_design-removebg-preview(1).png" type="image/x-icon">
     <link rel="stylesheet" href="/styles/game.css">
 </head>
 <body>
