--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -1,35 +1,72 @@
 /* styles.css */
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
     background-color: #000;
     color: #fff;
-    display: grid;
-    justify-content: center;
-    align-items: center;
     width: 100vw;
     height: 100vh; /* Make sure the body takes up the full viewport height */
-    margin: 0; /* Remove default margin */
+}
+.bg-green-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.flashMessage {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 50;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    pointer-events: none;
+}
+.flashMessage > div {
+    padding: 1rem;
+    border-radius: 0.75rem;
+    margin-top: 2.5rem;
+    text-align: center;
+    width: 25%;
+    pointer-events: all;
+}
+
+.gameBoard {
+    display: grid;
+    gap: 8vh;
 }
 
 .logout button {
     text-decoration: none;
-    color: white;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    font-size: x-large;
     background: #000;
+    border-radius: 0.75rem;
+    color: white;
+    font-size: x-large;
+    margin-top: 6vh;
+    margin-left: 32vw;
+    padding: 0.6rem;
 }
 .logout button:hover{
     text-decoration: underline;
-    scale: 125%;
+    text-transform: uppercase;
+    scale: 110%;
 }
 
 .main{
-    margin-top: -100px;
     display: grid;
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin-top: -3vh;
+    gap: 5vh;
 }
 
 p{
@@ -58,6 +95,7 @@ p{
     width: 400px;
     height: 400px;
     transform: rotate(0deg);
+    margin: -20px;
 }
 
 .piece.white {
