--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,14 +9,30 @@
 </head>
 <body class="bg-black">
     <div class="flex flex-col items-center justify-center h-screen p-10">
-        <form action="/auth/login" method="POST" class="bg-gray-800 py-8 px-10 w-96 rounded shadow-md flex items-center justify-center flex-col text-black">
+        <div class="absolute flashMessage flex justify-center items-center z-50 -inset-y-44 -mt-96">
+            <% if (messages.error && messages.error.length > 0) { %>
+                <div class="absolute alert alertDanger bg-red-500 text-white p-2 rounded-xl mb-4 text-center w-96 mt-10">
+                    <% messages.error.forEach(function(error) { %>
+                        <p><%= error %></p>
+                    <% }) %>
+                </div>
+            <% } %>
+            <% if (messages.success && messages.success.length > 0) { %>
+                <div class="absolute alert alertSuccess bg-green-500 text-white p-2 rounded-xl mb-4 text-center w-96 mt-10">
+                    <% messages.success.forEach(function(success) { %>
+                        <p><%= success %></p>
+                    <% }) %>
+                </div>
+            <% } %>
+        </div>
+        <form action="/auth/login" method="POST" class="bg-gray-800 py-8 px-10 w-96 rounded-2xl shadow-md flex items-center justify-center flex-col text-black">
             <h2 class="text-2xl mb-4 text-white">Login</h2>
             <input type="text" name="identifier" placeholder="Username or Email" required class="mb-4 text-center py-2 w-full rounded">
             <input type="password" name="password" placeholder="Password" required class="mb-4 text-center py-2 w-full rounded">
             <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold mt-6 py-2 px-4 text-center rounded focus:outline-none focus:shadow-outline">Login</button>
         </form>
-        <p class="p-2 text-white">Not Registered Yet? Register Now</p>
-        <div class="flex justify-center gap-4 mt-3">
+        <p class="py-4 text-white">Not Registered Yet? Register Now</p>
+        <div class="flex justify-center gap-4 mt-1">
             <a href="/register" class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-4 text-center rounded focus:outline-none focus:shadow-outline">Register</a>
             <p class="text-xl text-white">OR</p>
             <a href="/login" class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-4 text-center rounded focus:outline-none focus:shadow-outline">Google Login</a>
