--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,8 +9,25 @@
 </head>
 <body class="bg-black">
     <div class="flex flex-col items-center justify-center h-screen p-10">
-        <form action="/auth/register" method="POST" class="bg-gray-800 py-8 px-10 w-96 rounded shadow-md flex items-center justify-center flex-col text-black">
-            <h2 class="text-2xl mb-4 text-white">Register</h2>
+        <div class="flashMessage flex justify-center items-center z-50">
+            <% if (messages.error && messages.error.length > 0) { %>
+                <div class="absolute alert alertDanger bg-red-500 text-white p-2 rounded-xl mb-4 text-center w-96 mt-10">
+                    <% messages.error.forEach(function(error) { %>
+                        <p><%= error %></p>
+                    <% }) %>
+                </div>
+            <% } %>
+            <% if (messages.success && messages.success.length > 0) { %>
+                <div class="absolute alert alertSuccess bg-green-500 text-white p-2 rounded-xl mb-4 text-center w-96 mt-10">
+                    <% messages.success.forEach(function(success) { %>
+                        <p><%= success %></p>
+                    <% }) %>
+                </div>
+            <% } %>
+        </div>
+
+        <form action="/auth/register" method="POST" class="bg-gray-800 py-4 px-10 w-96 rounded-2xl shadow-md flex items-center justify-center flex-col text-black">
+            <h2 class="text-2xl mb-6 text-white">Register</h2>
             <input type="text" name="userName" placeholder="Username" required class="mb-4 text-center py-2 w-full rounded">
             <input type="text" name="firstName" placeholder="First Name" required class="mb-4 text-center py-2 w-full rounded">
             <input type="text" name="lastName" placeholder="Last Name" required class="mb-4 text-center py-2 w-full rounded">
@@ -18,14 +35,29 @@
             <input type="date" name="dob" placeholder="Date of Birth (YYYY-MM-DD)" class="mb-4 text-center py-2 w-full rounded">
             <input type="email" name="email" placeholder="Email" required class="mb-4 text-center py-2 w-full rounded">
             <input type="password" name="password" placeholder="Password" required class="mb-4 text-center py-2 w-full rounded">
-            <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold mt-6 py-2 px-4 text-center rounded focus:outline-none focus:shadow-outline">Register</button>
+            <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold my-3 py-2 px-4 text-center rounded focus:outline-none focus:shadow-outline">Register</button>
         </form>
-        <p class="p-2 text-white">Already Registered? Login Instead</p>
-        <div class="flex justify-center gap-4 mt-3">
+        <p class="py-4 text-white">Already Registered? Login Instead</p>
+        <div class="flex justify-center gap-4 mt-1">
             <a href="/login" class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-4 text-center rounded focus:outline-none focus:shadow-outline">Login</a>
             <p class="text-xl text-white">OR</p>
             <a href="/login" class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-4 text-center rounded focus:outline-none focus:shadow-outline">Google Login</a>
         </div>
     </div>
+    <script>
+        const alertSuccess = document.querySelector(".alertSuccess")
+        const alertDanger = document.querySelector(".alertDanger")
+        setTimeout(() => {
+            const flashMessage = document.querySelector('.flashMessage');
+            if (flashMessage) {
+                if (alertSuccess) {
+                    alertSuccess.style.backgroundColor = 'rgba(34, 197, 94, 0.5)';
+                    alertSuccess.style.display = 'none';
+                } else if (alertDanger) {
+                    alertDanger.style.display = 'none';
+                }
+            }
+        }, 10000);
+    </script>
 </body>
 </html>
