--- a/views/game.ejs
+++ b/views/game.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHESS Game | Play</title>
-    <link rel="icon" href="/images/Untitled_design-removebg-preview(1).png" type="image/x-icon">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.ico">
+    <!-- <link rel="icon" href="/images/Untitled_design-removebg-preview(1).png" type="image/x-icon"> -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="/styles/game.css">
 </head>
@@ -39,7 +40,10 @@
         </div>
         <div class="main">
             <p>Welcome to abnjain's Chess Game</p>
-            <div class="roleName"><span><%= userName ? userName : "Guest" %></span><p> as a Spectator</p></div>
+            <div class="roleName">
+                <span><%= userName && userName.name ? userName.name : "Guest" %></span>
+                <p> as a Spectator</p>
+            </div>
             <div class="chessBoard"></div>
             <!-- <div class="gameEndMessage"> -->
             <div class="gameEndMessage" style="display: none;">
@@ -51,6 +55,14 @@
                 </div>
             </div>
             <!-- <div class="roleName"><span><%= userName ? userName : "Guest" %></span><p> as a Spectator</p></div> -->
+        </div>
+        <div class="logMoves">
+            <p class="wMoves">
+                White Move: jfskdjklsfkl 
+            </p> <br>
+            <p class="bMoves">
+                Black Move: jfskdjklsfkl
+            </p>
         </div>
     </div>
         
