--- a/views/game.ejs
+++ b/views/game.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHESS Game | Play</title>
+    <title>CHESS Game | Play | abnjain</title>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.ico">
     <!-- <link rel="icon" href="/images/Untitled_design-removebg-preview(1).png" type="image/x-icon"> -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
