--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHESS Game</title>
+    <title>CHESS Game | abnjain</title>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- <link href="/styles/styles.css" rel="stylesheet" type="text/tailwindcss"> -->
